--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "cmake.sourceDirectory": "D:/Git Progect/complet/linux"
+  "cmake.sourceDirectory": "D:/Git Progect/complet/linux",
+  "files.exclude": {
+    "**/*.g.dart": true,
+    "**/*.freezed.dart": true
+  }
 }
