--- a/.github/worckflows/android_fastlane_firebase_app_distrbution_workflow.yml
+++ b/.github/worckflows/android_fastlane_firebase_app_distrbution_workflow.yml
@@ -26,13 +26,13 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.0'
+          ruby-version: '3.1' # or use '3.0' if you're sure
           bundler-cache: true
-          working-directory: android
 
       - name: Build and Distribute App
         working-directory: android
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
+          bundle install
           bundle exec fastlane android firebase_distribution
