--- a/.github/worckflows/android_fastlane_firebase_app_distrbution_workflow.yml
+++ b/.github/worckflows/android_fastlane_firebase_app_distrbution_workflow.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1' # or use '3.0' if you're sure
+          ruby-version: '3.1'
           bundler-cache: true
 
       - name: Build and Distribute App
